# YUTIAN

./: .gitignore  TouchOSC_LUA_AutomationCC  YT_teensy_ARP_V2_G5_MIDDI.ino
FFGLModelFX/: CMakeLists.txt  CMakePresets.json  README.md
FFGLModelFX/resources/: Info.plist.in
FFGLModelFX/resources/shaders/: model.frag  model.vert
FFGLModelFX/scripts/: deploy.sh
FFGLModelFX/src/: FBXLoader.cpp  FBXLoader.h  FFGLModelFX.cpp  FFGLModelFX.h  GLShader.cpp  GLShader.h  OBJLoader.cpp  OBJLoader.h
YT_teensy_ARP_V2_G5_MIDDI/: bpm.ino  effect.ino  led.ino  octave.ino  readmux.ino  scale.ino  sync.ino  syncdelay.ino  tap.ino  tune.ino  waveformsetting.ino
